added more ignore commands

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 # emacs backup files
 *~
+tempfile.txt
+.DS_Store
+*.zip
+*.gz
+log/*.log
+log/*.log.[0-9]
+assets/shotoshop/
+assets/videos/
+!assets/videos/tour_*.mp4
